# dslr

./: .gitignore  Makefile  README.md  log.txt  pyproject.toml  weights.json
datasets/: big_dataset.csv  dataset_analyse_log_predict.csv  dataset_analyse_log_train.csv  dataset_duplicates.csv  dataset_extra_columns.csv  dataset_missing_values.csv  dataset_no_labels.csv  dataset_noisy.csv  dataset_outliers.csv  dataset_renamed_columns.csv  dataset_shuffled_columns.csv  dataset_text_na.csv  dataset_too_small.csv
docs/: pipeline.md  prediction.md  training.md
scikit/: benchmark_sklearn_vs_mine.py
scripts/: analysis_log.py  analysis_log_predict.py  analysis_log_train.py  animate_logreg_train.py  histogram.py  kiviat_house_discipline_weights.py  logreg_predict.py  logreg_train.py  pair_plot.py  scatter_plot.py
tools/: benchmark_compare.py  make_pseudo_test.py
