[tool.poetry]
name = "dslr"
version = "0.1.0"
description = "42 DSLR project"
authors = ["sylvanna"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = ">=2.3.3,<3.0.0"
numpy = ">=2.2.4,<2.3.0"
matplotlib = ">=3.10.8,<4.0.0"

[tool.poetry.group.dev.dependencies]
scikit-learn = ">=1.7.0,<1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"